--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <div class="flex-container">
             <div class="flex-item-left">
-                <img src="../Assignment 1/images/index-wics-2.svg" alt="logo" width ="200" height="200" >
+                <img src="../images/index-wics-2.svg" alt="logo" width ="200" height="200" >
             </div>
             <div class="flex-item-right">
                 <iframe width="300" height="200" src="https://www.youtube.com/embed/1WnDOXy3Gr8?autoplay=0&mute=1">
