Updated directory path

--- a/contact.html
+++ b/contact.html
@@ -1,19 +1,18 @@
 <html lang="en-US">
 <head>
-    <!-- link href="styles/styles.css" rel="stylesheet"-->
 
-       <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
 <title>Women in Computer Science UofC</title>
-<link rel="icon" type="image/x-icon" href="../Assignment 1/images/WICS_logo.png">
+<link rel="icon" type="image/x-icon" href="../images/WICS_logo.png">
 </head>
 <body>
     <div class="header">
       <h1>Women In Computer Science</h1>
     </div>
 <div class="sidebar">
-    <h1><img src="../Assignment 1/images/WICS_logo.png" alt="logo" width ="80px" height="auto" ></h1>
+    <h1><img src="../images/WICS_logo.png" alt="logo" width ="80px" height="auto" ></h1>
 <a href="index.html">WiCS Home</a>
 <a href="team.html">Meet the Team</a>
 <a href="events.html">Events</a>
@@ -23,7 +22,7 @@
 
 <div class="content">
     <h1>Contact Us</h1>
-        <img src="../Assignment 1/images/meet-team.jpg" alt="logo" width="80px" height="auto">
+        <img src="../images/meet-team.jpg" alt="logo" width="80px" height="auto">
         <p>For general inquiries about the Women in Computer Science committee please email <a href="mailto:wics@ucalgary.ca" color="purple">wics@ucalgary.ca</a>.</p>
 <p>For information about activities for elementary and high school students please contact WiCS Outreach at <a href="mailto:wicsoutreach@ucalgary.ca" color="purple">wicsoutreach@ucalgary.ca</a>.</p>
     <div class="container">
@@ -37,11 +36,11 @@
       
           <label for="country">Year of Degree</label>
           <select id="country" name="country">
-            <option value="australia">First</option>
-            <option value="canada">Second</option>
-            <option value="usa">Third</option>
-            <option value="usa">Forth</option>
-            <option value="usa">Fifth</option>
+            <option value="First Year">First</option>
+            <option value="Second Year">Second</option>
+            <option value="Third Year">Third</option>
+            <option value="Forth Year">Forth</option>
+            <option value="Fifth Year">Fifth</option>
           </select>
       
           <label for="subject">Please let us know if you have any events suggestions:</label>
