--- a/submit.html
+++ b/submit.html
@@ -6,14 +6,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
 <title>Women in Computer Science UofC</title>
-<link rel="icon" type="image/x-icon" href="../Assignment 1/images/WICS_logo.png">
+<link rel="icon" type="image/x-icon" href="../images/WICS_logo.png">
 </head>
 <body>
     <div class="header">
       <h1>Women In Computer Science</h1>
     </div>
 <div class="sidebar">
-    <h1><img src="../Assignment 1/images/WICS_logo.png" alt="logo" width ="80px" height="auto" ></h1>
+    <h1><img src="../images/WICS_logo.png" alt="logo" width ="80px" height="auto" ></h1>
 <a href="index.html">WiCS Home</a>
 <a href="team.html">Meet the Team</a>
 <a href="events.html">Events</a>
