--- a/sponsors.html
+++ b/sponsors.html
@@ -1,19 +1,18 @@
 <html lang="en-US">
 <head>
-    <!-- link href="styles/styles.css" rel="stylesheet"-->
 
-       <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
 <title>Women in Computer Science UofC</title>
-<link rel="icon" type="image/x-icon" href="../Assignment 1/images/WICS_logo.png">
+<link rel="icon" type="image/x-icon" href="../images/WICS_logo.png">
 </head>
 <body>
     <div class="header">
         <h1>Women In Computer Science</h1>
     </div>
 <div class="sidebar">
-    <h1><img src="../Assignment 1/images/WICS_logo.png" alt="logo" width ="80px" height="auto" ></h1>
+    <h1><img src="../images/WICS_logo.png" alt="logo" width ="80px" height="auto" ></h1>
 <a href="index.html">WiCS Home</a>
 <a href="team.html">Meet the Team</a>
 <a href="events.html">Events</a>
@@ -29,12 +28,12 @@
     <div class="flex-container">
         <div class="flex-item-left">
             <a href="http://about.google/">
-            <img src="../Assignment 1/images/google-logo.jpg" alt="logo" width ="auto" height="auto" >
+            <img src="../images/google-logo.jpg" alt="logo" width ="auto" height="auto" >
             </a>
         </div>
         <div class="flex-item-right">
             <a href="http://www.scotiabank.com/careers/en/careers.html">
-            <img src="../Assignment 1/images/scotia-logo.jpeg" alt="logo" width ="auto" height="auto" >
+            <img src="../images/scotia-logo.jpeg" alt="logo" width ="auto" height="auto" >
         </a>
         </div>
       </div>
@@ -43,7 +42,7 @@
 <div class="parent">
     <div class="child">
         <a href="http://www.wish.com/careers?hide_login_modal=true">
-            <img src="../Assignment 1/images/wish-logo.jfif" alt="logo" width ="auto" height="auto" >
+            <img src="../images/wish-logo.jfif" alt="logo" width ="auto" height="auto" >
         </a>
     </div>
     <div class="child">
@@ -53,12 +52,12 @@
     </div>
     <div class="child">
         <a href="https://www.splunk.com/">
-            <img src="../Assignment 1/images/Splunk_logo.png" alt="logo" width ="auto" height="auto" >
+            <img src="../images/Splunk_logo.png" alt="logo" width ="auto" height="auto" >
         </a>
     </div>
     <div class="child">
         <a href="https://www.aboutamazon.com/">
-            <img src="../Assignment 1/images/amazon-logo.webp" alt="logo" width ="auto" height="auto" >
+            <img src="../images/amazon-logo.webp" alt="logo" width ="auto" height="auto" >
         </a>
     </div>
   </div>
@@ -67,12 +66,12 @@
 <div class="parent">
     <div class="child">
         <a href="https://careers.bloomberg.com/job/search">
-            <img src="../Assignment 1/images/bloomberg-logo.png" alt="logo" width ="auto" height="auto" >
+            <img src="../images/bloomberg-logo.png" alt="logo" width ="auto" height="auto" >
         </a>
     </div>
     <div class="child">
         <a href="https://www.opentext.com/">
-            <img src="../Assignment 1/images/opentext-logo.png" alt="logo" width ="auto" height="auto" >
+            <img src="../images/opentext-logo.png" alt="logo" width ="auto" height="auto" >
         </a>
     </div>
   </div>
