--- a/events.html
+++ b/events.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Women in Computer Science UofC</title>
-    <link rel="icon" type="image/x-icon" href="../Assignment 1/images/WICS_logo.png">
+    <link rel="icon" type="image/x-icon" href="../images/WICS_logo.png">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <h1>Women In Computer Science</h1>
     </div>
     <div class="sidebar">
-        <h1><img src="../Assignment 1/images/WICS_logo.png" alt="logo" width="80px" height="auto"></h1>
+        <h1><img src="../images/WICS_logo.png" alt="logo" width="80px" height="auto"></h1>
         <a href="index.html">WiCS Home</a>
         <a href="team.html">Meet the Team</a>
         <a class="active" href="events.html">Events</a>
@@ -25,7 +25,7 @@
 
     <div class="content">
         <h1>Events</h1>
-        <img src="../Assignment 1/images/ghc-events.png" alt="logo" width="80px" height="auto">
+        <img src="../images/ghc-events.png" alt="logo" width="80px" height="auto">
         <p>WiCS runs a number of events for undergraduates and graduate students that aim to raise awareness, enhance skills, and promote mentoring and community building. These events are often run in partnership with our <a href="sponsors.html">WiCS Sponsors</a>. 
             </p>
         <p>Below are events that we run annually:</p>
