Image directory updated

--- a/sponsors.html
+++ b/sponsors.html
@@ -47,7 +47,7 @@
     </div>
     <div class="child">
         <a href="https://www.skipthedishes.com/about/">
-            <img src="../Assignment 1/images/skipthedishes.png" alt="logo" width ="auto" height="auto" >
+            <img src="../images/skipthedishes.png" alt="logo" width ="auto" height="auto" >
         </a>
     </div>
     <div class="child">
