--- a/DotsAndBoxes.html
+++ b/DotsAndBoxes.html
@@ -31,6 +31,10 @@
          <th></th>
       </tr>
    </table>
+   
+  <form>
+  <input type="button" value="Restart the game!" onclick="window.location.href='./DotsAndBoxes.html';">
+ </form>
 
    <div id="game"></div>
    <script type="text/babel" src= "./gamelogic.js"></script>
