--- a/DotsAndBoxes.html
+++ b/DotsAndBoxes.html
@@ -32,9 +32,7 @@
       </tr>
    </table>
    
-  <form>
-  <input type="button" value="Restart the game!" onclick="window.location.href='./DotsAndBoxes.html';">
- </form>
+  <a class="button" href="./DotsAndBoxes.html">Restart the game!</a>
 
    <div id="game"></div>
    <script type="text/babel" src= "./gamelogic.js"></script>
