--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </h2>
 
     <h3>
-        <p><center><a href="DotsAndBoxes.html" button class="button">Start the game!</button></a></center></p>
+	<p><a href="./DotsAndBoxes.html" button class="button">Start the game!</button></a></p>
     </h3>
 </body>
 
