--- a/DotsAndBoxes.html
+++ b/DotsAndBoxes.html
@@ -32,7 +32,7 @@
       </tr>
    </table>
    
-   <p><a href="./DotsAndBoxes.html" button class="button">Restart the game!</button></a></p>
+   <p><a href="./DotsAndBoxes.html" button class="restart-button">Restart the game!</button></a></p>
 
    <div id="game"></div>
    <script type="text/babel" src= "./gamelogic.js"></script>
