--- a/winnerPlayer3.html
+++ b/winnerPlayer3.html
@@ -17,7 +17,7 @@
     </h2>
 
     <h3>
-        <p><center><a href="DotsAndBoxes.html" button class="button">Restart the game!</button></a></center></p>
+        <p><center><a href="DotsAndBoxes.html" button class="restart-button">Restart the game!</button></a></center></p>
     </h3>
 </body>
 
