--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>
-        DOTS AND BOXES
+       <img src="../images/DotsAndBoxes.png" alt="logo" width ="200" height="200" >
     </h1>
     <h2>
         <ul>
