--- a/DotsAndBoxes.html
+++ b/DotsAndBoxes.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+   <img src="../images/DotsAndBoxes.png" alt="logo" width ="200" height="200" >
    <table>
       <tr class="player1Color">
          <th></th>
