--- a/DotsAndBoxes.html
+++ b/DotsAndBoxes.html
@@ -14,7 +14,9 @@
 </head>
 
 <body>
-   <img src="../images/DotsAndBoxes.png" alt="logo" width ="200" height="200" >
+   <h1>
+      DOTS AND BOXES
+   </h1>
    <table>
       <tr class="player1Color">
          <th></th>
