--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Dots and boxes</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+<body class = "body-index-winners">
     <h1>
        <img src="../images/DotsAndBoxes.png" alt="logo" width ="200" height="200" >
     </h1>
