--- a/winnerPlayer2.html
+++ b/winnerPlayer2.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <h1>
-       <img src="../images/DotsAndBoxes.png" alt="logo" width ="200" height="200" >
-    </h1>
+      <center>
+      DOTS AND BOXES
+      </center>
+   </h1>
     <h2 class="player2Color">
         <center>
             PLAYER 2 WINS!
