--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Dots and boxes</title>
+	<title>Dots And Boxes</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body class = "body-index-winners">
+<body>
     <h1>
-       <img src="../images/DotsAndBoxes.png" alt="logo" width ="200" height="200" >
+       Dots And Boxes
     </h1>
+    <div class="background-img">
+    </div>
     <h2>
         <ul>
             <li>Take turns filling in the lines between the points.</li>
