--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>
-       Dots And Boxes
-    </h1>
+     <h1>
+      <center>
+      DOTS AND BOXES
+      </center>
+   </h1>
     <div class="background-img">
     </div>
     <h2>
