--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Dots And Boxes</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<div class="showcase">
+   <img src="..images/DotsAndBoxes.png" class="bg-image" />
+   </div>
 </head>
 <body>
      <h1>
       <center>
       DOTS AND BOXES
       </center>
-   </h1>
-    <div class="background-img">
-    </div>
     <h2>
         <ul>
             <li>Take turns filling in the lines between the points.</li>
