--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </center>
     </h1>
    <div class="showcase">
-   <img src="..images/DotsAndBoxes.png" class="bg-image" />
+   <img src="../images/DotsAndBoxes.png" class="bg-image" />
    </div>
     <h2>
         <ul>
